# dsc232

./: tutor.xml  tutor_use.md
group_project/: abstract_prep.md  data_links.md  milestones.md  phase4_roadmap.md  project_overview.md  project_roadmap.md
group_project/phase1/: check_resolution.py  data_audit.py  main.py  phase1_roadmap.md  pyproject.toml
group_project/phase1/output/: data_audit_report.md
group_project/phase2/: check_zarr.py  download_data.py  grid_utils.py  main.py  model_prep.py  phase2_roadmap.md  phase2_summary.md  pyproject.toml
group_project/phase3/: phase3_baseline_results.md  phase3_roadmap.md  pyproject.toml  train_baseline.py
group_project_v2/: project_overview.md
lec/week_01/: 1.1_transcript.txt  1.2_transcript.txt  1.3_notebook.txt  1.3_transcript.txt  2.1_transcript.txt  2.2_transcript.txt  2.3_transcript.txt  2.4.1_notebook.txt  2.4.2_notebook.txt  2.4.3_notebook.txt  2.4_transcript.txt  all_context.txt  week_01_guide.tex
lec/week_02/: 3.1_slides.txt  3.1_transcript.txt  3.2_notebook.md  3.2_transcript.txt  3.3_notebook.md  3.3_transcript.txt  3.4_notebook.md  3.4_transcript.txt  3.5_transcript.txt  4.1_notebook.md  4.1_transcript.txt  4.2_notebook.md  4.2_transcript.txt  4.3_notebook.md  4.3_transcript.txt  all_week_02.txt  week_02_guide.tex
lec/week_03/: 5.1_notebook.md  5.1_transcript.txt  5.2_notebook.md  5.2_transcript.txt  6.1_transcript.txt  all_context.txt
questions/: week_01_questions.md  week_02_questions.md  week_03_questions.md  week_04_questions.md  week_05_questions.md  week_05_summary.md
(+25 files in other folders)
