[project]
name = "phase1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "scipy>=1.17.0",
    "xarray>=2025.12.0",
]
