[project]
name = "phase1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.2",
    "dask>=2025.12.0",
    "distributed>=2025.12.0",
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]
